<resources>
    <string name="app_name">Calculator</string>
    <string name="tip">Введите выражение</string>
    <string name="reset_button">AC</string>
    <string name="left_brace_button">(</string>
    <string name="right_brace_button">)</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="four_button">4</string>
    <string name="zero_button">0</string>
    <string name="five_button">5</string>
    <string name="three_button">3</string>
    <string name="two_button">2</string>
    <string name="one_button">1</string>
    <string name="mult_button">*</string>
    <string name="div_button">/</string>
    <string name="equal_button">=</string>
    <string name="six_button">6</string>
    <string name="point_button">,</string>
</resources>