<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:layout_weight="1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:text="@string/reset_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:text="@string/left_brace_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_margin="6dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/right_brace_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:layout_height="match_parent"
            android:text="@string/plus_button"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:textSize="40dp"
            android:layout_height="match_parent"
            android:text="@string/seven_button"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/eight_button"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine_button"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/minus_button"
            android:layout_margin="6dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:textSize="40dp"
            android:text="@string/four_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:textSize="40dp"
            android:text="@string/five_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:textSize="40dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:text="@string/six_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:text="@string/div_button"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:textSize="40dp"
            android:text="@string/one_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:text="@string/two_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three_button"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mult_button"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:textSize="40dp"
            android:text="@string/zero_button"
            android:layout_weight="25"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/point_button"
            android:textSize="40dp"
            android:layout_margin="6dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:text="@string/equal_button"
            android:textSize="40dp"
            android:layout_weight="1"/>
        
    </LinearLayout>

